--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -24,9 +24,20 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="277"
-        android:layout_height="277"
+        android:layout_width="277dp"
+        android:layout_height="277dp"
         app:srcCompat="@drawable/thumb"
         tools:layout_editor_absoluteX="54dp"
         tools:layout_editor_absoluteY="117dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="REPLAY AGAIN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="449dp" />
 </android.support.constraint.ConstraintLayout>
